# nimbox-sre

./: .dockerignore  .env.example  .env.swarm.example  Dockerfile  README.md  agent.py  config.yaml  docker-compose.yml  docker-stack.yml  pyproject.toml
app/: config.py  conversation_agent.py  main.py  models.py  nightingale_client.py  report_builder.py  storage.py  telegram_client.py  warpgate_client.py
docker/: SOUL.md  ensure-state-permissions.sh  start-gateway.sh
docker/tools/: nightingale_tool.py  opensre_tool.py  toolsets.py  warpgate_tool.py
docs/: modern-collector-webhook.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_python
graphify-out/cache/: stat-index.json
plugins/nimbox_sre/: __init__.py  plugin.yaml
skills/: auto-doc.md  auto-fix.md  incident-response.md  maintenance-windows.md  remediation-loop.md  sre-monitor.md
tests/: test_modern_collector_tools.py  test_monit_alerts.py
wiki/: index.md  log.md
wiki/schema/: AGENTS.md
