[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimelectric-telegram-agent"
version = "0.1.0"
description = "Telegram PDF -> NimElectric API bot with report generation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pypdf>=5.0.0",
  "requests>=2.31.0",
  "reportlab>=4.2.0",
  "pydantic>=2.8.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.4.0",
  "agno>=1.8.0",
  "openai>=1.99.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
